--- a/WooCommerce/Classes/ViewRelated/Orders/Cells/OrderNoteTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/Orders/Cells/OrderNoteTableViewCell.xib
@@ -31,20 +31,14 @@
                         </constraints>
                         <inset key="imageEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fyu-0I-8Fk">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9D-sT-W5S">
                         <rect key="frame" x="54" y="19" width="250" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9D-sT-W5S">
-                        <rect key="frame" x="54" y="43.5" width="250" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7py-ye-y1B">
-                        <rect key="frame" x="54" y="68" width="250" height="20.5"/>
+                        <rect key="frame" x="54" y="43.5" width="250" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -52,29 +46,23 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="h9D-sT-W5S" secondAttribute="trailing" id="10O-OD-hx6"/>
-                    <constraint firstItem="h9D-sT-W5S" firstAttribute="top" secondItem="fyu-0I-8Fk" secondAttribute="bottom" priority="750" constant="4" id="36q-mx-OTD"/>
                     <constraint firstItem="7py-ye-y1B" firstAttribute="top" secondItem="h9D-sT-W5S" secondAttribute="bottom" constant="4" id="MrP-2V-xgC"/>
                     <constraint firstItem="YMK-WG-vE9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Qsi-AX-gpI"/>
                     <constraint firstAttribute="trailing" secondItem="7py-ye-y1B" secondAttribute="trailing" constant="16" id="TJ8-k4-vEO"/>
-                    <constraint firstItem="fyu-0I-8Fk" firstAttribute="leading" secondItem="YMK-WG-vE9" secondAttribute="trailing" constant="14" id="YGa-PW-eLs">
-                        <variation key="heightClass=regular-widthClass=compact" constant="12"/>
-                    </constraint>
-                    <constraint firstItem="h9D-sT-W5S" firstAttribute="leading" secondItem="fyu-0I-8Fk" secondAttribute="leading" id="cFC-lm-Oef"/>
+                    <constraint firstItem="h9D-sT-W5S" firstAttribute="top" secondItem="YMK-WG-vE9" secondAttribute="top" id="cvF-lP-ns4"/>
                     <constraint firstItem="YMK-WG-vE9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="dQ0-UK-1FW"/>
-                    <constraint firstItem="fyu-0I-8Fk" firstAttribute="top" secondItem="YMK-WG-vE9" secondAttribute="top" id="fam-32-ROy"/>
+                    <constraint firstItem="h9D-sT-W5S" firstAttribute="leading" secondItem="YMK-WG-vE9" secondAttribute="trailing" constant="12" id="g4p-lY-o8h"/>
                     <constraint firstAttribute="bottomMargin" secondItem="7py-ye-y1B" secondAttribute="bottom" priority="250" constant="8" id="r4x-c9-yPW"/>
-                    <constraint firstItem="fyu-0I-8Fk" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="uD0-6h-0tL"/>
                     <constraint firstItem="7py-ye-y1B" firstAttribute="leading" secondItem="h9D-sT-W5S" secondAttribute="leading" id="vTe-SY-gaS"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="dateLabel" destination="fyu-0I-8Fk" id="NXx-gP-jfl"/>
                 <outlet property="iconButton" destination="YMK-WG-vE9" id="B9f-Mv-uD8"/>
                 <outlet property="noteLabel" destination="7py-ye-y1B" id="KnD-L8-UjD"/>
                 <outlet property="statusLabel" destination="h9D-sT-W5S" id="T4j-Su-yEa"/>
             </connections>
-            <point key="canvasLocation" x="34" y="101.5"/>
+            <point key="canvasLocation" x="33.600000000000001" y="100.74962518740631"/>
         </tableViewCell>
     </objects>
 </document>
