--- a/WooCommerce/Classes/ViewRelated/Orders/Billing Information/BillingInformationViewController.xib
+++ b/WooCommerce/Classes/ViewRelated/Orders/Billing Information/BillingInformationViewController.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BillingInformationViewController" customModule="WooCommerce" customModuleProvider="target">
             <connections>
-                <outlet property="tableView" destination="aZ4-L4-7w9" id="z90-jI-jDH"/>
+                <outlet property="tableView" destination="eXD-Va-gYx" id="3oi-3h-TcM"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,21 +21,22 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="44" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="aZ4-L4-7w9">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="114" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="eXD-Va-gYx">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <inset key="separatorInset" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="ap8-XW-xPU"/>
-                        <outlet property="delegate" destination="-1" id="vOK-ag-ihX"/>
+                        <outlet property="dataSource" destination="-1" id="kQe-EA-7Bf"/>
+                        <outlet property="delegate" destination="-1" id="7SQ-Q1-fwC"/>
                     </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="aZ4-L4-7w9" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="K6M-i8-pDw"/>
-                <constraint firstItem="aZ4-L4-7w9" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="pNO-Hm-BbA"/>
-                <constraint firstItem="aZ4-L4-7w9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="v41-Et-ttb"/>
-                <constraint firstItem="aZ4-L4-7w9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="zld-g7-WY1"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="eXD-Va-gYx" secondAttribute="bottom" id="0wn-I6-XCt"/>
+                <constraint firstItem="eXD-Va-gYx" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="11e-rx-0Y6"/>
+                <constraint firstItem="eXD-Va-gYx" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="O0D-w3-dKV"/>
+                <constraint firstItem="eXD-Va-gYx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="zc8-ku-cRM"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
